Revision history for Perl extension Port-Generator

{{$NEXT}}

0.1.3 2016-10-07T09:04:42Z
    - Improved wording of documentation
    - Added a SEE ALSO section in doc, with reference to Net::EmptyPort
    - Added a minimal DESCRIPTION of the module

0.1.2 2016-10-06T15:03:50Z
    - fix SYNOPSIS

0.1.1 2016-10-06T07:56:20Z
    - travis test, travis budges

0.1.0 2016-10-06T07:45:47Z

    - original version
