@@ -1,6 +1,7 @@
-Revision history for Perl extension Port-Generator
+Revision history for Perl extension Port-Selector
 
 {{$NEXT}}
+    - Rename distribution from Port::Generator to Port::Selector
 
 0.1.3 2016-10-07T09:04:42Z
     - Improved wording of documentation
